--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -39,7 +39,8 @@ html {
 }
 
 .title {
-  color: grey;
+  color: black;
+  text-align: justify;
 }
 
 .button {
@@ -75,11 +76,10 @@ html {
     <div class="column">
         <div class="card">
             <div class="container">
-                <h2>Kitaaba Gadaa Kutaa 8<sup>ffaa</sup></h2>
-                <p class="title">App'n kun <strong> Kitaaba Gadaa </strong> kan kutaa 8<sup>ffaa</sup>
-                    bifa baay'ee addaa ta'eefi namni irra yeroofi bakkaan osoo hin dangeeffamiin barachuu akka danda'uu
-                    kan taasisuufi kan qophaa'e yeroo ta'u; namni hundii app kana fayyadamuun waa'ee gadaa kutaa 8<sup>ffaa</sup>
-                    n baratan haala salphaan irraa hubaachu danda'a.</p>
+                <h2 style="padding:10px;">American Common Phrases in Every Day Contexts</h2>
+                <p class="title">Every language has conventional and much-used ways of expressing even the most common place requests, inquiries, or responses. Some of these expressions are idioms or idiomatic. Others are perfectly understandable and literal English, but people unfamiliar with the language may have difficulty formulating them in typical and conventional ways. This app is a collection of daily used American English conversations containing nearly 6,000 phrases such expressions grouped into 537 topics that are listed under 83 major categories of social interaction. New to this application are extensive illustrations that place numerous expressions in a visual context, facilitating understanding and memorization. The complete list of major category headings and their topics can be found in
+                    easily scrollable views and Categories, Etymologies. This app can also be used for browsing through topics.</p>
+                    <p style="text-align:justify;">Even if you don't understand some words you can search them on Google, Bing, Collins Dictionary, Wikibooks, Word references, Google Translator, Youtube, and Pinterest.  All of this can be done without leaving the application. All of the phrases and words are listed in a way to make using them more easy and more convenient ways. </p>
                 <p>If you have any suggestions, please let me know.</p>
                 <p>ማንኛውም አስተያየት ካለዎት እባክዎ ያሳውቁኝ።</p>
                 <p>Thank you!</p>
